# urdf_test

./: .gitignore  LICENSE  README.md  package.xml  setup.py
config/: nav2_default.yaml
launch/: first_navigation.launch.py  gazebo.launch.py  test.launch.py
maps/: map.pgm  map.yaml
models/my_room/: model.sdf
rviz/: config.rviz  nav2_default_view.rviz
urdf/: test.urdf  test.xacro
worlds/: my_room.world
