<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdf_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="okarobo@todo.todo">okarobo</maintainer>
  <license>TODO: License declaration</license>

  <depend>urdf_launch</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>

  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>launch_testing</depend>
  <depend>pluginlib</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
